--- a/index.html
+++ b/index.html
@@ -479,13 +479,11 @@
         </div>
     </section>
 
-
-
     <section id="Contact" class="contact py-5 ">
         <div class="container py-5">
             <div class="row text-center">
                 <div class=" col-lg-5 m-auto ">
-                    <h1>Contact Us</h1>
+                    <h1><span class="bg-white px-2 py-1 rounded"> Contact Us </h1></span>
 
                 </div>
             </div>
